--- a/WebServiceStudy/build.xml
+++ b/WebServiceStudy/build.xml
@@ -87,7 +87,8 @@
 <project name="TomcatProject" basedir="." default="usage">  
 
   <!-- #### Change for your system. #### -->
-  <property name="tomcat.home" value="/home/mkalin/tomcat7"/>
+  <!-- <property name="tomcat.home" value="/home/mkalin/tomcat7"/> -->
+  <property name="tomcat.home" value="D:/Java/Apache Software Foundation/Apache Tomcat 7.0.14"/>
 
   <!-- Leave the rest as they are. -->
   <property name="tomcat.lib"  value="${tomcat.home}/lib"/>
